--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: "" # 루트에 호스팅할 경우 공백
 url: "https://Hwangbj-94.github.io" # 본인의 GitHub Pages URL
 
 theme: null  # 이 줄 반드시 추가
-remote_theme: chrisrhymes/bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
 
 plugins:
   - jekyll-feed
