--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Beomju's Lab
+title: Beomju HWANG's Page
 description: "My research, thoughts, and writings"
 baseurl: "" # 루트에 호스팅할 경우 공백
 url: "https://Hwangbj-94.github.io" # 본인의 GitHub Pages URL
